--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT = puerto
 CNN_MONGO = url de su cluster de mongodb atlas o su base de datos
+SECRETORPRIVATEKEY = clave nuestra para generar un token
